# elfeditor

./: CMakeLists.txt  README.md  elf_binary.cc  elf_binary.h  elfeditor_main.cc  phdr_editor_main.cc  utils.cc  utils.h
tests/: CMakeLists.txt  bash_no_edit.sh  hello.c  hello_no_edit.sh
